# surely-this-cant-work

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.claude/: settings.json
docs/: arch-review-1.md  arch-review-2.md  (+15 more)
lib/rvos/: Cargo.toml
lib/rvos/src/: channel.rs  dns.rs  error.rs  fs.rs  lib.rs  message.rs  raw.rs  reactor.rs  service.rs  socket.rs  transport.rs  tty.rs  window.rs
user/: CLAUDE.md  Cargo.toml  riscv64gc-unknown-rvos.json  user.ld
user/.cargo/: config.toml
user/bench/: Cargo.toml
user/bench/src/: main.rs
user/dbg/: Cargo.toml
user/dbg/src/: main.rs
user/ext2-server/: Cargo.toml
user/ext2-server/src/: blk_client.rs  block_cache.rs  ext2.rs  main.rs
user/fbcon/: Cargo.toml
user/fbcon/src/: main.rs
user/fs/: Cargo.toml
user/fs/src/: main.rs  syscall.rs
user/gui-bench/: Cargo.toml
user/gui-bench/src/: main.rs
user/hello/: Cargo.toml
user/hello/src/: main.rs
user/http-client/: Cargo.toml
user/http-client/src/: main.rs
user/http-server/: Cargo.toml
user/http-server/src/: main.rs
user/ipc-torture/: Cargo.toml
user/ipc-torture/src/: main.rs
user/ktest/: Cargo.toml
user/ktest-helper/: Cargo.toml
user/ktest-helper/src/: main.rs
user/ktest/src/: main.rs
user/nc/: Cargo.toml
user/nc/src/: main.rs
user/net-stack/: Cargo.toml
user/net-stack/src/: arp.rs  dhcp.rs  eth.rs  ipv4.rs  main.rs  tcp.rs  udp.rs
user/rvos-rt/: Cargo.toml
user/rvos-rt/src/: lib.rs
user/shell/: Cargo.toml  build.rs  linker.ld
user/shell/.cargo/: config.toml
user/shell/src/: main.rs  shell.rs  syscall.rs
user/tcp-echo/: Cargo.toml
user/tcp-echo/src/: main.rs
user/triangle/: Cargo.toml
user/triangle/src/: main.rs
user/udp-echo/: Cargo.toml
user/udp-echo/src/: main.rs
user/winclient/: Cargo.toml
user/winclient/src/: main.rs
user/window-server/: Cargo.toml
user/window-server/src/: main.rs
(+245 files in other folders)
