[workspace]
members = [
    "bench",
    "dbg",
    "fbcon",
    "fs",
    "gui-bench",
    "hello",
    "ipc-torture",
    "ktest",
    "ktest-helper",
    "net-stack",
    "rvos-rt",
    "shell",
    "triangle",
    "tcp-echo",
    "udp-echo",
    "winclient",
    "window-server",
]
resolver = "2"

[workspace.dependencies]
rvos-rt = { path = "rvos-rt" }
rvos = { path = "../lib/rvos" }
rvos-proto = { path = "../lib/rvos-proto" }
rvos-gfx = { path = "../lib/rvos-gfx" }

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
