[package]
name = "rvos"
version = "0.1.0"
edition = "2021"

[features]
rustc-dep-of-std = ["core", "alloc", "rvos-wire/rustc-dep-of-std", "rvos-proto/rustc-dep-of-std"]

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
rvos-wire = { path = "../rvos-wire" }
rvos-proto = { path = "../rvos-proto" }
